2009-11-07  Charlie Zender  <zender@uci.edu>

	* Change sprintf() and scanf() formatting for nco_int from long to int

	* Implement empirical list of N-D coordinate "fixed" variables:
	lat, lon, lev, longxy, latixy

	* Change fixed variable exclusion condition from is_ncbo to
	is_rnk_prs_rth_opr()

2009-10-30  Charlie Zender  <zender@uci.edu>

	* #define NCO_INT NCO_TYP_INT instead of NCO_TYP_LONG
	Longs are 8-bytes on 64-bit systems, and NCO_INTs are always 4 bytes.
	Stuffing the 4 bytes into 8 bytes of RAM is harmless locally, and
	ensures the NCO code is robust in other ways. 
	However, it also seems to confuse/break DAP-handling of ints.
	
2009-10-29  Charlie Zender  <zender@uci.edu>

	* Add short option -6, and better document -6, --64, --64bit options

2009-10-21  Henry Butowsky  <henryb@hush.com> 

	* Ensure ncap2 compiles	with NCO_INT==NCO_TYP_INT. Affects
	fmc_all_cls.cc msk_cls srt_cls fmc_gsl_cls.cc, map_srt_tmp.hh,
	ncoGrammar.g   
	
2009-10-15  Henry Butowsky  <henryb@hush.com> 

	* Tidy-up sort methods srt_cls

2009-10-13  Henry Butowsky  <henryb@hush.com> 

	* Add secret flag tst_udunits option to ncks. 
	Usage: --tst_udunits,'units_in','units_out','calendar type'
        
2009-09-30  Charlie Zender  <zender@uci.edu>

	* Remove attempt to set chunking in ncap2 writes

2009-09-26  Charlie Zender  <zender@uci.edu>

	* Add CNK option to Makefile to set HAVE_NEW_CHUNKING_API to
	handle netCDF 4.0.x vs. netCDF 4.1+ chunking API differences 

	* Fix library flags for parallel HDF/netCDF4

2009-09-24  Henry Butowsky  <henryb@hush.com> 

	* Add manual sub-section on calendar CF support in UDUnits node
	
2009-09-21  Charlie Zender  <zender@uci.edu>

	* Implement Intel mpicc/mpiCC compilers on greenplanet with lustre

2009-09-11  Henry Butowsky  <henryb@hush.com> 

	* Committed first cut of nco_cal.{c,h}

	* These are calendar functions for hyperslabbing coordinate
	variables with CF attribute "calendar". Currently supported