@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.343 2009-11-07 22:59:56 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.344 2009-11-08 06:48:17 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.0 are ready. 
 
@@ -19,8 +19,8 @@ Spectral transforms.
 A. NCO recognizes more variables that are coordinate variables
    or multi-dimensional coordinate variables and does not attempt
    to arithmetically process (e.g., difference) these in most
-   situations. This allows more convenient manipulation of, e.g.,
-   CLM and NARCCAP files.
+   situations. This allows more convenient manipulation of datasets
+   with irregular grids, e.g., CLM and NARCCAP output.
 
 B. ncap2 supports the GSL (Chapter 2) fitting routines, e.g., fxm
    ncap2 -v -O -s 'defdim("dmn",100);sigma[dmn]=1.0;var1=gsl_ran_gaussian(sigma);var2=gsl_stats_skew(var1);print(var2)' in.nc out.nc
